--- a/SettingsView/SettingsView.csproj
+++ b/SettingsView/SettingsView.csproj
@@ -51,5 +51,19 @@
 	  <Folder Include="Handlers\CheckboxCell\" />
 	  <Folder Include="Handlers\DatePickerCell\" />
 	  <Folder Include="Handlers\EntryCell\" />
+	  <Folder Include="Handlers\NumberPickerCell\" />
+	  <Folder Include="Handlers\RadioCell\" />
+	  <Folder Include="Handlers\SwitchCell\" />
+	  <Folder Include="Handlers\TextPickerCell\" />
+	  <Folder Include="Handlers\TimePickerCell\" />
+	  <Folder Include="Handlers\LabelCellBase\" />
 	</ItemGroup>	
+	<ItemGroup>
+	  <None Remove="Handlers\NumberPickerCell\" />
+	  <None Remove="Handlers\RadioCell\" />
+	  <None Remove="Handlers\SwitchCell\" />
+	  <None Remove="Handlers\TextPickerCell\" />
+	  <None Remove="Handlers\TimePickerCell\" />
+	  <None Remove="Handlers\LabelCellBase\" />
+	</ItemGroup>
 </Project>
