--- a/nuget/AzurePipelines.nuspec
+++ b/nuget/AzurePipelines.nuspec
@@ -25,6 +25,7 @@ Preview version.
         <file src="artifacts/net6.0-android/SettingsView.dll" target="lib/net6.0-android26.0" />
         <file src="artifacts/net6.0-android/SettingsView.xml" target="lib/net6.0-android26.0" />
         <file src="artifacts/net6.0-android/SettingsView.pdb" target="lib/net6.0-android26.0" />
+		<file src="artifacts/net6.0-android/SettingsView.aar" target="lib/net6.0-android26.0" />
         <!-- iOS -->
         <file src="artifacts/net6.0-ios/SettingsView.dll" target="lib/net6.0-ios13.0" />
         <file src="artifacts/net6.0-ios/SettingsView.xml" target="lib/net6.0-ios13.0" />
