--- a/Sample/Sample.csproj
+++ b/Sample/Sample.csproj
@@ -66,7 +66,6 @@
 	<ItemGroup>
 	  <PackageReference Include="Prism.DryIoc.Maui" Version="8.1.273-pre" />
 	  <PackageReference Include="ReactiveProperty" Version="8.1.2" />
-	  <PackageReference Include="AiForms.Maui.SettingsView" Version="0.1.7-pre" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Views\" />
@@ -90,5 +89,8 @@
 	  <MauiXaml Update="Views\Cells\SliderCell.xaml">
 	    <SubType></SubType>
 	  </MauiXaml>
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\SettingsView\SettingsView.csproj" />
 	</ItemGroup>
 </Project>
