--- a/nuget/AzurePipelines.nuspec
+++ b/nuget/AzurePipelines.nuspec
@@ -15,6 +15,7 @@ There are various cells such as (LabelCell,ButtonCell,CommandCell,SwitchCell,Che
         </description>
         <summary></summary>
         <releaseNotes>
+- Fix Android CustomCell Size
 - Update .NET 7.0
 - Fix PickerCell SingleSelectMode not working.
         </releaseNotes>
